Unfortunately, using the JDI and its associated machinery was garden path for communicating with the Android world. The way to go is to exploit the logs, which, happily, are useful. This commit starts to commit to that path.